--- a/popcorn-game.vcxproj.filters
+++ b/popcorn-game.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Engine.h">
       <Filter>Engine</Filter>
     </ClInclude>
+    <ClInclude Include="Border.h">
+      <Filter>Border</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="popcorn-game.rc">
@@ -59,6 +62,9 @@
     </ClCompile>
     <ClCompile Include="Engine.cpp">
       <Filter>Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Border.cpp">
+      <Filter>Border</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
